benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-safe018_rmo.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe018_rmo.oepc.yml/safe018_rmo.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe018_rmo.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_jz76m8s3/tmp/tmp4asn1spr.c
Compilation started
/tmp/BenchExec_run_jz76m8s3/tmp/tmp4asn1spr.c: In function ‘P0’:
/tmp/BenchExec_run_jz76m8s3/tmp/tmp4asn1spr.c:581:19: error: ‘FALSE’ undeclared (first use in this function)
  581 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_jz76m8s3/tmp/tmp4asn1spr.c:581:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_jz76m8s3/tmp/tmp4asn1spr.c: In function ‘main’:
/tmp/BenchExec_run_jz76m8s3/tmp/tmp4asn1spr.c:691:19: error: ‘TRUE’ undeclared (first use in this function)
  691 |   weak$$choice1 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
